--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,11 @@ body {
   background-color: lightblue;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  color: var(--dark);
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.3;
+  font-size: 20px;
+  font-family: cursive;
+  color: deeppink;
+
 }
 
 h1,
@@ -27,18 +28,33 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 50;
+  color: black;
+  font-weight: 50px;
   margin: 0;
-  color: var(--dark);
   line-height: 1.25;
 }
 
-h2 a:visited {
-  color: var(--tertiary);
+.btn {
+  font-size: 1.3rem;
+  text-decoration: none;
+  padding: 6px 5px;
+  width: 100%;
+  display: block;
+  background-color: lightcoral;
+  box-shadow: 3px 3px deeppink;
+  margin: 5px 0;
+  border-radius: 5px;
+  color: black;
+}
+
+.btn:hover {
+  color: black;
+  background-color: lightgray;
+  box-shadow: 2px 2px deeppink;
 }
 
 h2 a {
-  color: var(--primary);
+  color: black;
 }
 
 header {
@@ -50,12 +66,9 @@ main {
   width: 94%;
 }
 
-a {
-  text-decoration: none;
-}
 
 p {
-  font-size: 1.2rem;
+  font-size: 15px;
 }
 
 input {
@@ -70,27 +83,11 @@ input {
   color: black;
 }
 
-.btn {
-  font-size: 1.3rem;
-  text-decoration: none;
-  padding: 6px 5px;
-  width: 100%;
-  display: block;
-  margin: 5px 0;
-  border-radius: var(--border-radius);
-  color: var(--primary);
-  border: none;
-  outline: none;
-  background-color: var(--light-dark);
-  box-shadow: 3px 3px var(--dark);
-  transform: translate(-1px, -1px);
-}
 
-.btn:hover {
-  color: var(--primary);
-  background-color: var(--tertiary);
-  transform: translate(0, 0);
-  box-shadow: 2px 2px var(--dark);
+.form-label,
+.form-input,
+.form-textarea {
+  display: block;
 }
 
 .btn-inline {
@@ -104,7 +101,7 @@ input {
 .navbar {
   width: 100%;
   position: fixed;
-  background-color: var(--dark);
+  background-color: pink;
 }
 
 .nav-item {
@@ -112,13 +109,13 @@ input {
 }
 
 .nav-item a {
-  color: var(--primary);
+  color: black;
 }
 
 .hero {
   padding: 3% 4%;
-  background-color: var(--dark);
-  color: var(--primary);
+  background-color: lightcoral;
+  color: black;
 }
 
 .hero p {
@@ -126,17 +123,17 @@ input {
 }
 
 .app-title {
-  font-size: 3rem;
-  background-color: var(--primary);
-  color: var(--dark);
-  padding: 0 10px;
+  font-size: 50px;
+  background-color: deeppink;
+  color: black;
+  padding: 0 20px;
   display: inline-block;
-  border-radius: var(--border-radius);
-  box-shadow: 6px 5px var(--light-dark);
+  border-radius: 2px;
+  
 }
 
 .app-title a {
-  color: var(--dark);
+  color: black;
 }
 
 .list-group {
@@ -166,7 +163,6 @@ input {
   text-decoration: none;
 }
 
-/* CARDS */
 .card {
   margin: 0 0 20px 0;
   border: 3px solid var(--dark);
@@ -174,8 +170,8 @@ input {
 }
 
 .card-header {
-  color: var(--primary);
-  background-color: var(--dark);
+  color: black;
+  background-color: lightcoral;
   padding: 1%;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
@@ -184,12 +180,6 @@ input {
   padding: 1%;
 }
 
-/* FORM */
-.form-label,
-.form-input,
-.form-textarea {
-  display: block;
-}
 
 .form-label {
   font-size: 1.1rem;
