--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,8 +11,8 @@
       <label for="password-input-login" class="form-label">Password</label>
       <input type="password" id="password-input-login" />
     </div>
-    <button type="submit" id="login-btn" class="btn">Login!</button>
-    <a type="button" href="/signup">Sign up instead</a>
+    <button type="submit" id="login-btn" class="btn">Login Here</button>
+    <a type="button" href="/signup">Would You Like To SignUp?</a>
   </form>
 </div>
 
