--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,8 +123,8 @@ input {
 }
 
 .app-title {
+  font-family: fantasy;
   font-size: 50px;
-  background-color: deeppink;
   color: black;
   padding: 0 20px;
   display: inline-block;
@@ -164,9 +164,9 @@ input {
 }
 
 .card {
-  margin: 0 0 20px 0;
-  border: 3px solid var(--dark);
-  border-radius: var(--border-radius);
+  margin: 0 0 30px 0;
+  border: 3px solid deeppink;
+  border-radius: 5px;
 }
 
 .card-header {
@@ -195,7 +195,7 @@ input {
   border-radius: var(--border-radius);
 }
 
-/* HEIGHT / WIDTH UTILS */
+
 .min-100-vh {
   min-height: 100vh;
 }
@@ -204,12 +204,10 @@ input {
   min-width: 100vw;
 }
 
-/* FONT UTILS */
 .text-uppercase {
   text-transform: uppercase;
 }
 
-/* FLEX CONTENT */
 .flex-row {
   display: flex;
   flex-wrap: wrap;
